Fix a bug of neat wrapping of figcaption

--- a/src/sass/content/_block.scss
+++ b/src/sass/content/_block.scss
@@ -113,13 +113,22 @@ $stile-block-level-blockquote-cite: 0 !default;
 		figure:not([data-stile~='aligncenter']) {
 			&.alignleft, &.alignright {
 				display: table;
-				width: 1px;
 
 				img {
 					display: table-row;
 					width: auto;
 				}
-				figcaption { min-width: $stile-block-size-min-width; }
+				figcaption {
+					min-width: $stile-block-size-min-width;
+					display: table-caption;
+					caption-side: bottom;
+					text-align: center;
+
+					span {
+						display: inline-block;
+						text-align: left;
+					}
+				}
 			}
 		}
 	}
